[fix] [style] constrain layout for IE11
layout broke without max-width rules – possibly flex bug for IE11

--- a/_sass/main/_l-core.scss
+++ b/_sass/main/_l-core.scss
@@ -1,6 +1,6 @@
 .core {
   display: flex;
-  flex-flow: column nowrap;
+  flex-flow: row wrap;
 }
 
 .core-header {
