--- a/_sass/main/_l-footer.scss
+++ b/_sass/main/_l-footer.scss
@@ -12,6 +12,7 @@
   color: $gray00;
   display: flex;
   padding: 2em 1em;
+  width: 100%;
   & {
     @include axiom(.75em);
   }
