--- a/_sass/main/_width-queries.scss
+++ b/_sass/main/_width-queries.scss
@@ -293,6 +293,7 @@
   .core-footer {
     flex: 0 0 36em;
     margin: auto;
+    max-width: 36em;
   }
 
   .core-header {
@@ -372,6 +373,7 @@
   .core-header,
   .core-footer {
     flex: 0 0 45em;
+    max-width: 45em;
   }
 
   .core-header {
@@ -541,6 +543,7 @@
   .core-header,
   .core-footer {
     flex: 0 0 54em;
+    max-width: 54em;
   }
 
   .core-header {
